styles/hud/hud.scss
@use '../config' as *;
@use '../abstract/mixin';
@use 'sass:color';

.hud {
	width: 100%;
	height: 100%;
	flow-children: none;

	&__in-world,
	&__reticle {
		width: 100%;
		height: 100%;
	}
}

#PopupManager,
#TooltipManager,
#ContextMenuManager {
	width: 100%;
	height: 100%;
	flow-children: none;
}

// TODO: what the fuck?
MomHudGhostEntities {
	position: 100px 200px 0px;
}

.hud-blur {
	width: 100%;
	height: 100%;
	-s2-mix-blend-mode: opaque;
	blur: fastgaussian(4, 4, 5);

	&--weak {
		blur: fastgaussian(4, 4, 2);
	}
}

#HudTopLeft {
	horizontal-align: left;
	vertical-align: top;
	flow-children: down;
}

#HudNotify {
	horizontal-align: left;
	vertical-align: top;
	flow-children: down;
}

#HudTopCenter {
	horizontal-align: center;
	width: 100%;
	opacity: 1;
	flow-children: down;
}

#HudBottomCenter {
	horizontal-align: center;
	vertical-align: bottom;
	width: 100%;
	height: 45%;
	opacity: 1;
	flow-children: down;
}

#HudLowerLeft {
	horizontal-align: left;
	vertical-align: bottom;
	flow-children: down;
}

#HudTopRight {
	horizontal-align: right;
	vertical-align: top;
	flow-children: down;
}

#HudCenter {
	width: 100%;
	height: 100%;
	horizontal-align: center;
	vertical-align: top;
}

#HudBottomRight {
	horizontal-align: right;
	vertical-align: bottom;
	flow-children: down;
}

#HudInWorld,
#HudReticle {
	width: 100%;
	height: 100%;
}

